--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <a target="_blank" href="https://icons8.com/icons/set/crane-hook">Crane Hook icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="signin.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,8 +30,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" href="hook.png" />
-    <title>Context Hook</title>
+
+    <title>Sign In</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
